fix: make sidebar img fill container width
Before this commit the sidebar image was not filling it's container,
leaving a small gap between the image and the right hand side.

--- a/frontend/src/components/SidebarApp.module.scss
+++ b/frontend/src/components/SidebarApp.module.scss
@@ -1,9 +1,14 @@
 .imageWrapper {
   background-color: #e3e7eb;
   height: 215px;
+  width: fit-content;
   overflow: hidden;
   display: flex;
   position: relative;
+
+  img {
+    width: 370px;
+  }
 }
 
 .replaceImageOverlay {
